--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="register_name">Username</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="already_account">Already have an account? <font color="#486D86"><b> Login</b></font></string>
+    <string name="home_title">Welcome</string>
+    <string name="home_sub_title">Enjoy using it !!!</string>
+    <string name="button_logout">Logout</string>
 
 
 </resources>
