workoutFragmentV2 -usable recycleview and simple db feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,15 @@
     <string name="today_s_record">Today\'s Record</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
+
+    <string name="Amount_routine_string">%d ROUTINE</string>
+    <string name="daily_routine_target">Daily Target: %d Routine</string>
+
+
+
+    <string-array name="arrForCustomWorkOut">
+        <item>Reps</item>
+        <item>Duration (seconds)</item>
+    </string-array>
 </resources>
