--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,11 +52,11 @@
     <string name="bedtime_title">Bed Time</string>
     <string name="weekly_records">Weekly Records</string>
     <string name="add_calories">add calories</string>
-    <string name="calories_progress">400 CALS</string>
-    <string name="calories_target">Daily Target: 2400 cals</string>
+    <string name="calories_progress">%s CALS</string>
+    <string name="calories_target">Daily Target: %s cals</string>
     <string name="target_text">Target</string>
-    <string name="calories_left">2000 calories to go</string>
-    <string name="calories_input">400 cals</string>
+    <string name="calories_left">%s calories to go</string>
+    <string name="calories_input">%s cals</string>
     <string name="food">Maggie Mee</string>
     <string name="food_time">LUNCH</string>
     <string name="select_type">Select Type</string>
