--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,8 @@
     <string name="food_time">LUNCH</string>
     <string name="select_type">Select Type</string>
     <string name="popular_foods">Popular Foods</string>
-
+    <string name="stop_sleep">Stop sleep</string>
+    <string name="play_sleep">Play sleep</string>
 
 
 </resources>
