--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,8 @@
     <string name="add_sleep">add sleep</string>
     <string name="_250_ml">250 ML</string>
     <string name="next_reminder">Next Reminder</string>
-    <string name="bed_record_time_text">9:30 am</string>
-    <string name="wakeup_record_time_text">9:30 am</string>
+    <string name="bed_record_time_text">0 : 00 AM</string>
+    <string name="wakeup_record_time_text">0 : 00 AM</string>
     <string name="_9_30_am">9:30 am</string>
     <string name="edit_reminder_button">edit reminder button</string>
     <string name="today_s_record">Today\'s Record</string>
